# distwq

./: .pre-commit-config.yaml  README.md  distwq.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: main.yaml
examples/: example_distwq.py  example_distwq_probe.py  example_distwq_service.py  example_distwq_spawn.py  example_distwq_spawn_broker_is_worker.py  example_distwq_spawn_coinit.py  example_distwq_spawn_sendrecv.py  example_distwq_split.py  example_distwq_submit_multiple.py  example_nrn.py  example_nrn_direct.py
tests/: test_distwq.py  test_mpi_distwq.py
