[tool.poetry]
name = "distwq"
version = "0.3.1"
description = "Distributed queue operations with mpi4py"
authors = ["Ivan Raikov <ivan.g.raikov@gmail.com>"]
license = "GPL-3"

[tool.poetry.dependencies]
python = "^3.8"
mpi4py = "^3.1.3"
numpy = "^1.23.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
