[project]
name = "distwq"
version = "0.1.0"
description = "Distributed queue operations with mpi4py"
authors = [
    { name = "Ivan Raikov", email = "ivan.g.raikov@gmail.com" }
]
license = "GPL-3.0-or-later"
repository = "https://github.com/iraikov/distwq"
keywords = ["MPI", "mpi4py", "distributed computing", "distributed queue"]
dependencies = [
    "mpi4py>=4.0.0",
    "numpy<2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.2",
    "pre-commit>=3.8.0",
    "scriv>=1.5.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["distwq.py"]
